Avoid flickering of tracker list when selecting items from queue

--- a/templates/pixelegg/app.css
+++ b/templates/pixelegg/app.css
@@ -124,6 +124,11 @@ label.tracker_trIdEdit:before {
 #tracker-edit_tr_assigned + .chzn-container .chzn-results {
   max-height: 215px;
 }
+#tracker-index_tracker-index-queue {
+  position: relative;
+  width: 200px;
+  height: 24px;
+}
 #egw_fw_sidebar #egw_fw_sidemenu .egw_fw_ui_scrollarea_outerdiv .egw_fw_ui_sidemenu_entry_header_active h1 {
   font-size: 1.15em !important;
 }
